J'ajout les les icones des liens

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Bonicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- My css -->
+     <link rel="stylesheet" href="./assets/style/style.css">
     <title>Responsive Dashboard</title>
 </head>
 <body>
@@ -23,25 +24,25 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
+                    <i class='bx bxs-store'></i>
                      <span class="text">My store</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
+                    <i class='bx bx-line-chart'></i>
                      <span class="text">Analytics</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
+                    <i class='bx bx-message-rounded-dots'></i>
                      <span class="text">Message</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
+                    <i class='bx bxs-group' ></i>
                      <span class="text">Team</span>
                 </a>
             </li>
@@ -49,14 +50,14 @@
         <ul class="side-menu">
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
+                    <i class='bx bx-cog'></i>
                      <span class="text">Settings</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-stats'></i>
-                     <span class="text">My Store</span>
+                    <i class='bx bx-log-out'></i>
+                     <span class="text">Logout</span>
                 </a>
             </li>
         </ul>
