J'ai termin la declaration des variable du colleur pour les deux mode

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- My css -->
      <link rel="stylesheet" href="./assets/style/style.css">
+     <!-- Google font  -->
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Responsive Dashboard</title>
 </head>
 <body>
