--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Responsive Dashboard</title>
 </head>
 <body>
+    <!-- Debut de Side bar -->
     <section id="sidebar">
         <a href="#" class="brand">
             <i class='bx bxs-dashboard'></i>
@@ -65,5 +66,6 @@
             </li>
         </ul>
     </section>
+    <!-- Fin de Side bar -->
 </body>
 </html>
